Updated sequence collection
recipe: org.openrewrite.java.migrate.util.SequencedCollection