@@ -137,7 +137,7 @@ public class Range extends GroundReceiverMeasurement<Range> {
                                                        });
 
             // Clock offsets
-            final ObservableSatellite satellite = getSatellites().get(0);
+            final ObservableSatellite satellite = getSatellites().getFirst();
             final double              dts       = satellite.getClockOffsetDriver().getValue(common.getState().getDate());
             final double              dtg       = getStation().getClockOffsetDriver().getValue(common.getState().getDate());
 
@@ -214,7 +214,7 @@ public class Range extends GroundReceiverMeasurement<Range> {
                             });
 
             // Clock offsets
-            final ObservableSatellite satellite = getSatellites().get(0);
+            final ObservableSatellite satellite = getSatellites().getFirst();
             final Gradient            dts       = satellite.getClockOffsetDriver().getValue(nbParams, common.getIndices(), state.getDate());
             final Gradient            dtg       = getStation().getClockOffsetDriver().getValue(nbParams, common.getIndices(), state.getDate());
 
