@@ -57,7 +57,7 @@ public abstract class AbstractKalmanEstimator {
     protected AbstractKalmanEstimator(final MatrixDecomposer decomposer,
                                       final List<? extends PropagatorBuilder> builders) {
         this.builders = builders;
-        this.referenceDate = builders.get(0).getInitialOrbitDate();
+        this.referenceDate = builders.getFirst().getInitialOrbitDate();
         this.decomposer = decomposer;
         this.observer = null;
     }
