@@ -196,7 +196,7 @@ public class UnscentedEstimationTestUtils {
 		final Vector3D geovelocity = new Vector3D(0., 0., 0.);
 
 		// Compute the frames transformation from station frame to EME2000
-		Transform topoToEME = context.stations.get(0).getBaseFrame().getTransformTo(FramesFactory.getEME2000(),
+		Transform topoToEME = context.stations.getFirst().getBaseFrame().getTransformTo(FramesFactory.getEME2000(),
 				new AbsoluteDate(2000, 1, 1, 12, 0, 0.0, context.utc));
 
 		// Station position in EME2000 at reference date
