@@ -83,13 +83,13 @@ class GroundStationTest {
                                                                1.0, 3.0, 300.0);
 
         // change one station clock
-        final TopocentricFrame base  = context.stations.get(0).getBaseFrame();
+        final TopocentricFrame base  = context.stations.getFirst().getBaseFrame();
         final BodyShape parent       = base.getParentShape();
         final double deltaClock      = 0.00084532;
         final String changedSuffix   = "-changed";
         final GroundStation changed  = new GroundStation(new TopocentricFrame(parent, base.getPoint(),
                                                                               base.getName() + changedSuffix), context.ut1.getEOPHistory(),
-                                                         context.stations.get(0).getDisplacements());
+                                                         context.stations.getFirst().getDisplacements());
 
         // create orbit estimator
         final BatchLSEstimator estimator = new BatchLSEstimator(new LevenbergMarquardtOptimizer(),
@@ -103,7 +103,7 @@ class GroundStationTest {
                                                        range.getObservedValue()[0],
                                                        range.getTheoreticalStandardDeviation()[0],
                                                        range.getBaseWeight()[0],
-                                                       range.getSatellites().get(0)));
+                                                       range.getSatellites().getFirst()));
                 } else {
                     estimator.addMeasurement(range);
                 }
@@ -154,7 +154,7 @@ class GroundStationTest {
 
         // move one station
         final RandomGenerator random = new Well19937a(0x4adbecfc743bda60L);
-        final TopocentricFrame base = context.stations.get(0).getBaseFrame();
+        final TopocentricFrame base = context.stations.getFirst().getBaseFrame();
         final BodyShape parent = base.getParentShape();
         final Vector3D baseOrigin = parent.transform(base.getPoint());
         final Vector3D deltaTopo = new Vector3D(2 * random.nextDouble() - 1,
@@ -168,7 +168,7 @@ class GroundStationTest {
                                                                                             parent.getBodyFrame(),
                                                                                             null),
                                                                            base.getName() + movedSuffix), context.ut1.getEOPHistory(),
-                                                      context.stations.get(0).getDisplacements());
+                                                      context.stations.getFirst().getDisplacements());
 
         // create orbit estimator
         final BatchLSEstimator estimator = new BatchLSEstimator(new LevenbergMarquardtOptimizer(),
@@ -181,7 +181,7 @@ class GroundStationTest {
                                                        range.getObservedValue()[0],
                                                        range.getTheoreticalStandardDeviation()[0],
                                                        range.getBaseWeight()[0],
-                                                       range.getSatellites().get(0)));
+                                                       range.getSatellites().getFirst()));
                 } else {
                     estimator.addMeasurement(range);
                 }
@@ -207,7 +207,7 @@ class GroundStationTest {
 
         GeodeticPoint result = moved.getOffsetGeodeticPoint((AbsoluteDate) null);
 
-        GeodeticPoint reference = context.stations.get(0).getBaseFrame().getPoint();
+        GeodeticPoint reference = context.stations.getFirst().getBaseFrame().getPoint();
         Assertions.assertEquals(reference.getLatitude(),  result.getLatitude(),  3.3e-14);
         Assertions.assertEquals(reference.getLongitude(), result.getLongitude(), 1e-13);
         Assertions.assertEquals(reference.getAltitude(),  result.getAltitude(),  2.6e-7);
@@ -295,7 +295,7 @@ class GroundStationTest {
                                                 linearRange.getObservedValue()[0],
                                                 linearRange.getTheoreticalStandardDeviation()[0],
                                                 linearRange.getBaseWeight()[0],
-                                                linearRange.getSatellites().get(0));
+                                                linearRange.getSatellites().getFirst());
                     estimator.addMeasurement(zeroRange);
                 }
             }
@@ -305,7 +305,7 @@ class GroundStationTest {
         estimator.setMaxEvaluations(200);
 
         // we want to estimate pole and prime meridian
-        GroundStation station = zeroEOPContext.stations.get(0);
+        GroundStation station = zeroEOPContext.stations.getFirst();
         station.getPrimeMeridianOffsetDriver().setReferenceDate(refDate);
         station.getPrimeMeridianOffsetDriver().setSelected(true);
         station.getPrimeMeridianDriftDriver().setSelected(true);
