@@ -45,7 +45,7 @@ public class GeneratorTest {
     @Test
     public void testIssue557() {
 
-        final EventDetector detector = EstimationTestUtils.getElevationDetector(context.stations.get(0).getBaseFrame(),
+        final EventDetector detector = EstimationTestUtils.getElevationDetector(context.stations.getFirst().getBaseFrame(),
                                                                                 FastMath.toRadians(0.0));
 
         double[] azElError = new double[] {
@@ -60,8 +60,8 @@ public class GeneratorTest {
         double rangeSigma = 40.0;
         double rangeBW = 1;
         ObservableSatellite obs = new ObservableSatellite(0);
-        RangeBuilder rB = new RangeBuilder(null, context.stations.get(0), false, rangeSigma, rangeBW,obs);
-        AngularAzElBuilder aAEB = new AngularAzElBuilder(null, context.stations.get(0), azElError, baseweight, obs);
+        RangeBuilder rB = new RangeBuilder(null, context.stations.getFirst(), false, rangeSigma, rangeBW,obs);
+        AngularAzElBuilder aAEB = new AngularAzElBuilder(null, context.stations.getFirst(), azElError, baseweight, obs);
         double  timeToEnd = Constants.JULIAN_DAY;
 
         AbsoluteDate initialDate = context.initialOrbit.getDate();
