@@ -195,7 +195,7 @@ public class IonoModifierTest {
 
 
         final IonosphericModel mockModel = new MockIonosphericModel(12.0);
-        mockModel.getParametersDrivers().get(0).setSelected(true);
+        mockModel.getParametersDrivers().getFirst().setSelected(true);
         final PhaseIonosphericDelayModifier modifier = new PhaseIonosphericDelayModifier(mockModel, frequency);
 
         for (final ObservedMeasurement<?> measurement : measurements) {
