@@ -77,7 +77,7 @@ public class AEMParserTest {
         final String ex = "/ccsds/adm/aem/AEMExample01.txt";
         final DataSource source = new DataSource(ex, () -> getClass().getResourceAsStream(ex));
         final Aem file = new ParserBuilder().buildAemParser().parseMessage(source);
-        final Segment<AemMetadata, AemData> segment0 = file.getSegments().get(0);
+        final Segment<AemMetadata, AemData> segment0 = file.getSegments().getFirst();
         final Segment<AemMetadata, AemData> segment1 = file.getSegments().get(1);
         final AbsoluteDate start = new AbsoluteDate("1996-11-28T22:08:02.5555", TimeScalesFactory.getUTC());
         Assertions.assertEquals(0.0, start.durationFrom(file.getSatellites().get("1996-062A").getStart()), Double.MIN_VALUE);
@@ -131,7 +131,7 @@ public class AEMParserTest {
                                                                    new Rotation(0.68427, 0.56748, 0.03146, 0.45689, false),
                                                                    Vector3D.ZERO,
                                                                    Vector3D.ZERO),
-                                 segment0.getData().getAngularCoordinates().get(0), 1.0e-5);
+                                 segment0.getData().getAngularCoordinates().getFirst(), 1.0e-5);
         verifyAngularCoordinates(new TimeStampedAngularCoordinates(new AbsoluteDate(1996, 11, 28, 22, 8,
                                                                                     new TimeOffset(3, TimeOffset.SECOND,
                                                                                                    555500, TimeOffset.MICROSECOND),
@@ -185,7 +185,7 @@ public class AEMParserTest {
                                                                    new Rotation(0.72501, -0.64585, 0.018542, -0.23854, false),
                                                                    Vector3D.ZERO,
                                                                    Vector3D.ZERO),
-                                 segment1.getData().getAngularCoordinates().get(0), 1.0e-5);
+                                 segment1.getData().getAngularCoordinates().getFirst(), 1.0e-5);
         verifyAngularCoordinates(new TimeStampedAngularCoordinates(new AbsoluteDate(1996, 12, 18, 12, 10, new TimeOffset(5, TimeOffset.SECOND,
                                                                                                                          555500,
                                                                                                                          TimeOffset.MICROSECOND),
@@ -216,7 +216,7 @@ public class AEMParserTest {
                            buildAemParser();
 
         final Aem file = parser.parse(source); // using generic API here
-        final Segment<AemMetadata, AemData> segment0 = file.getSegments().get(0);
+        final Segment<AemMetadata, AemData> segment0 = file.getSegments().getFirst();
         final List<String> headerComment = new ArrayList<>();
         headerComment.add("comment");
         Assertions.assertEquals(headerComment, file.getHeader().getComments());
@@ -265,7 +265,7 @@ public class AEMParserTest {
                             file.getHeader().getCreationDate().durationFrom(new AbsoluteDate("2008-071T17:09:49", utc)),
                             1.0e-12);
         Assertions.assertEquals("GSFC FDF", file.getHeader().getOriginator());
-        final Segment<AemMetadata, AemData> segment0 = file.getSegments().get(0);
+        final Segment<AemMetadata, AemData> segment0 = file.getSegments().getFirst();
         Assertions.assertEquals("ST5-224", segment0.getMetadata().getObjectName());
         Assertions.assertEquals("2006224", segment0.getMetadata().getObjectID());
         Assertions.assertEquals("J2000",   segment0.getMetadata().getEndpoints().getFrameA().getName());
@@ -286,7 +286,7 @@ public class AEMParserTest {
                             1.0e-12);
         Assertions.assertEquals(AttitudeType.SPIN, segment0.getMetadata().getAttitudeType());
         Assertions.assertEquals(1, segment0.getData().getComments().size());
-        Assertions.assertEquals("Spin KF ground solution, SPINKF rates", segment0.getData().getComments().get(0));
+        Assertions.assertEquals("Spin KF ground solution, SPINKF rates", segment0.getData().getComments().getFirst());
         Assertions.assertEquals(8, segment0.getData().getAngularCoordinates().size());
         TimeStampedAngularCoordinates prev = null;
         for (TimeStampedAngularCoordinates tac : segment0.getData().getAngularCoordinates()) {
@@ -313,7 +313,7 @@ public class AEMParserTest {
                             file.getHeader().getCreationDate().durationFrom(new AbsoluteDate("2021-04-13T08:41:42", utc)),
                             1.0e-12);
         Assertions.assertEquals("CS GROUP", file.getHeader().getOriginator());
-        final Segment<AemMetadata, AemData> segment0 = file.getSegments().get(0);
+        final Segment<AemMetadata, AemData> segment0 = file.getSegments().getFirst();
         Assertions.assertEquals("COPIHUE",   segment0.getMetadata().getObjectName());
         Assertions.assertEquals("2100-017F", segment0.getMetadata().getObjectID());
         Assertions.assertEquals(2100,        segment0.getMetadata().getLaunchYear());
@@ -359,7 +359,7 @@ public class AEMParserTest {
         final DataSource source = new DataSource(ex, () -> getClass().getResourceAsStream(ex));
         final AemParser parser  = new ParserBuilder().buildAemParser();
         final Aem file = parser.parseMessage(source);
-        final Segment<AemMetadata, AemData> segment0 = file.getSegments().get(0);
+        final Segment<AemMetadata, AemData> segment0 = file.getSegments().getFirst();
         final List<String> headerComment = new ArrayList<>();
         headerComment.add("comment");
         Assertions.assertEquals(headerComment, file.getHeader().getComments());
@@ -384,7 +384,7 @@ public class AEMParserTest {
         final AbsoluteDate refDate = new AbsoluteDate(1996, 11, 28, 21, 29, 7.2555, TimeScalesFactory.getUTC());
 
         // Computed angular coordinates
-        final TimeStampedAngularCoordinates ac = segment0.getData().getAngularCoordinates().get(0);
+        final TimeStampedAngularCoordinates ac = segment0.getData().getAngularCoordinates().getFirst();
         final FieldRotation<UnivariateDerivative1> r = ac.toUnivariateDerivative1Rotation();
         final UnivariateDerivative1[] angles = r.getAngles(segment0.getMetadata().getEulerRotSeq(),
                                                            RotationConvention.FRAME_TRANSFORM);
@@ -405,7 +405,7 @@ public class AEMParserTest {
         final AemParser parser  = new ParserBuilder().buildAemParser();
 
         final Aem file = parser.parseMessage(source);
-        final TimeStampedAngularCoordinates ac = file.getSegments().get(0).getAngularCoordinates().get(7);
+        final TimeStampedAngularCoordinates ac = file.getSegments().getFirst().getAngularCoordinates().get(7);
         final Vector3D lastSpin = ac.getRotation().applyInverseTo(Vector3D.PLUS_K);
         Assertions.assertEquals(268.45119, FastMath.toDegrees(MathUtils.normalizeAngle(lastSpin.getAlpha(), FastMath.PI)), 1.0e-5);
         Assertions.assertEquals(68.317275, FastMath.toDegrees(lastSpin.getDelta()), 1.0e-5);
@@ -418,7 +418,7 @@ public class AEMParserTest {
         final AemParser parser  = new ParserBuilder().buildAemParser();
 
         final Aem file = parser.parseMessage(source);
-        final TimeStampedAngularCoordinates ac = file.getSegments().get(0).getAngularCoordinates().get(7);
+        final TimeStampedAngularCoordinates ac = file.getSegments().getFirst().getAngularCoordinates().get(7);
         final Vector3D lastSpin = ac.getRotation().applyInverseTo(Vector3D.PLUS_K);
         Assertions.assertEquals(268.45119, FastMath.toDegrees(MathUtils.normalizeAngle(lastSpin.getAlpha(), FastMath.PI)), 1.0e-5);
         Assertions.assertEquals(68.317275, FastMath.toDegrees(lastSpin.getDelta()), 1.0e-5);
@@ -430,7 +430,7 @@ public class AEMParserTest {
         final DataSource source = new DataSource(ex, () -> getClass().getResourceAsStream(ex));
         final AemParser parser  = new ParserBuilder().buildAemParser();
         final Aem file = parser.parseMessage(source);
-        final Segment<AemMetadata, AemData> segment0 = file.getSegments().get(0);
+        final Segment<AemMetadata, AemData> segment0 = file.getSegments().getFirst();
         final List<String> headerComment = new ArrayList<>();
         headerComment.add("comment");
         Assertions.assertEquals(headerComment, file.getHeader().getComments());
@@ -468,7 +468,7 @@ public class AEMParserTest {
         final AbsoluteDate refDate = new AbsoluteDate("2002-12-18T12:00:00.331", TimeScalesFactory.getUTC());
 
         Assertions.assertEquals(3, segment0.getData().getAngularCoordinates().size());
-        final TimeStampedAngularCoordinates ac0 = segment0.getData().getAngularCoordinates().get(0);
+        final TimeStampedAngularCoordinates ac0 = segment0.getData().getAngularCoordinates().getFirst();
         Assertions.assertEquals(0.0, ac0.getDate().durationFrom(refDate), 1.0e-5);
         Assertions.assertEquals(0.0,
                             Rotation.distance(new Rotation(0.68427, 0.56748, 0.03146, 0.45689, true),
@@ -495,7 +495,7 @@ public class AEMParserTest {
         final DataSource source = new DataSource(ex, () -> getClass().getResourceAsStream(ex));
         final AemParser parser  = new ParserBuilder().buildAemParser();
         final Aem file = parser.parseMessage(source);
-        final Segment<AemMetadata, AemData> segment0 = file.getSegments().get(0);
+        final Segment<AemMetadata, AemData> segment0 = file.getSegments().getFirst();
         final List<String> headerComment = new ArrayList<>();
         headerComment.add("This example shows an AEM with a rotation");
         Assertions.assertEquals(headerComment, file.getHeader().getComments());
@@ -520,7 +520,7 @@ public class AEMParserTest {
         final AbsoluteDate refDate = new AbsoluteDate("2020-090T05:00:00.071", TimeScalesFactory.getUTC());
 
         Assertions.assertEquals(2, segment0.getData().getAngularCoordinates().size());
-        final TimeStampedAngularCoordinates ac0 = segment0.getData().getAngularCoordinates().get(0);
+        final TimeStampedAngularCoordinates ac0 = segment0.getData().getAngularCoordinates().getFirst();
         Assertions.assertEquals(0.0, ac0.getDate().durationFrom(refDate), 1.0e-5);
         Assertions.assertEquals(0.0,
                             Rotation.distance(new Rotation(RotationOrder.XYZ, RotationConvention.FRAME_TRANSFORM,
@@ -548,7 +548,7 @@ public class AEMParserTest {
         final DataSource source = new DataSource(ex, () -> getClass().getResourceAsStream(ex));
         final AemParser parser  = new ParserBuilder().buildAemParser();
         final Aem file = parser.parseMessage(source);
-        final Segment<AemMetadata, AemData> segment0 = file.getSegments().get(0);
+        final Segment<AemMetadata, AemData> segment0 = file.getSegments().getFirst();
         Assertions.assertEquals(TimeSystem.TAI,          segment0.getMetadata().getTimeSystem());
         Assertions.assertEquals("OREKIT SAT",            segment0.getMetadata().getObjectName());
         Assertions.assertEquals("2020-012A",             segment0.getMetadata().getObjectID());
@@ -564,7 +564,7 @@ public class AEMParserTest {
         final AbsoluteDate refDate = new AbsoluteDate("2021-04-15T13:31:20.000", tai);
 
         Assertions.assertEquals(7, segment0.getData().getAngularCoordinates().size());
-        final TimeStampedAngularCoordinates ac0 = segment0.getData().getAngularCoordinates().get(0);
+        final TimeStampedAngularCoordinates ac0 = segment0.getData().getAngularCoordinates().getFirst();
         Assertions.assertEquals(0.0, ac0.getDate().durationFrom(refDate), 1.0e-5);
         Assertions.assertEquals(0.0,
                             Rotation.distance(new Rotation(-0.488615, -0.402157,  0.581628,  0.511111, true),
@@ -615,7 +615,7 @@ public class AEMParserTest {
         final AemParser parser  = new ParserBuilder().buildAemParser();
         final Aem file = parser.parseMessage(source);
 
-        final Segment<AemMetadata, AemData> segment0 = file.getSegments().get(0);
+        final Segment<AemMetadata, AemData> segment0 = file.getSegments().getFirst();
         Assertions.assertEquals(TimeSystem.TAI,          segment0.getMetadata().getTimeSystem());
         Assertions.assertEquals("MMS",                   segment0.getMetadata().getObjectName());
         Assertions.assertEquals("2015-011A",             segment0.getMetadata().getObjectID());
@@ -719,7 +719,7 @@ public class AEMParserTest {
         //verify
         Assertions.assertEquals(
                 CelestialBodyFactory.getEarth(),
-                actual.getSegments().get(0).getMetadata().getCenter().getBody());
+                actual.getSegments().getFirst().getMetadata().getCenter().getBody());
     }
 
     @Test
@@ -849,12 +849,12 @@ public class AEMParserTest {
 
         final DataSource source1 = new DataSource(name, () -> getClass().getResourceAsStream(name));
         final Aem file = builder.buildAemParser().parseMessage(source1);
-        Assertions.assertEquals(7, file.getSegments().get(0).getMetadata().getInterpolationDegree());
+        Assertions.assertEquals(7, file.getSegments().getFirst().getMetadata().getInterpolationDegree());
         Assertions.assertEquals(1, file.getSegments().get(1).getMetadata().getInterpolationDegree());
 
         final DataSource source2 = new DataSource(name, () -> getClass().getResourceAsStream(name));
         final Aem file2 = builder.withDefaultInterpolationDegree(5).buildAemParser().parseMessage(source2);
-        Assertions.assertEquals(7, file2.getSegments().get(0).getMetadata().getInterpolationDegree());
+        Assertions.assertEquals(7, file2.getSegments().getFirst().getMetadata().getInterpolationDegree());
         Assertions.assertEquals(5, file2.getSegments().get(1).getMetadata().getInterpolationDegree());
     }
 
@@ -863,7 +863,7 @@ public class AEMParserTest {
         final String ex = "/ccsds/adm/aem/AEMExample08.txt";
         final DataSource source = new DataSource(ex, () -> getClass().getResourceAsStream(ex));
         final Aem file = new ParserBuilder().buildAemParser().parseMessage(source);
-        final AemSegment segment0 = file.getSegments().get(0);
+        final AemSegment segment0 = file.getSegments().getFirst();
         Assertions.assertEquals(CelestialBodyFrame.GTOD, segment0.getMetadata().getEndpoints().getFrameB().asCelestialBodyFrame());
 
         final BoundedAttitudeProvider provider = segment0.getAttitudeProvider();
@@ -883,7 +883,7 @@ public class AEMParserTest {
         final String ex = "/ccsds/adm/aem/AEMExample09.txt";
         final DataSource source = new DataSource(ex, () -> getClass().getResourceAsStream(ex));
         final Aem file = new ParserBuilder().buildAemParser().parseMessage(source);
-        final AemSegment segment0 = file.getSegments().get(0);
+        final AemSegment segment0 = file.getSegments().getFirst();
         Assertions.assertEquals(FramesFactory.getITRF(ITRFVersion.ITRF_1993, IERSConventions.IERS_2010, true),
                             segment0.getMetadata().getEndpoints().getFrameA().asFrame());
 
