@@ -365,7 +365,7 @@ public class TdmParserTest {
         final DataSource source = new DataSource(name, () -> TdmParserTest.class.getResourceAsStream(name));
         Tdm file = new ParserBuilder().withRangeUnitsConverter(null).buildTdmParser().parseMessage(source);
         Assertions.assertEquals(3, file.getSegments().size());
-        Assertions.assertEquals(TimeSystem.UTC, file.getSegments().get(0).getMetadata().getTimeSystem());
+        Assertions.assertEquals(TimeSystem.UTC, file.getSegments().getFirst().getMetadata().getTimeSystem());
         Assertions.assertEquals(TimeSystem.TCG, file.getSegments().get(1).getMetadata().getTimeSystem());
         Assertions.assertEquals(TimeSystem.UTC, file.getSegments().get(2).getMetadata().getTimeSystem());
     }
@@ -377,7 +377,7 @@ public class TdmParserTest {
         final DataSource source = new DataSource(name, () -> TdmParserTest.class.getResourceAsStream(name));
         Tdm file = new ParserBuilder().withRangeUnitsConverter(null).buildTdmParser().parseMessage(source);
         Assertions.assertEquals(3, file.getSegments().size());
-        Assertions.assertEquals(TimeSystem.UTC, file.getSegments().get(0).getMetadata().getTimeSystem());
+        Assertions.assertEquals(TimeSystem.UTC, file.getSegments().getFirst().getMetadata().getTimeSystem());
         Assertions.assertEquals(TimeSystem.TCG, file.getSegments().get(1).getMetadata().getTimeSystem());
         Assertions.assertEquals(TimeSystem.UTC, file.getSegments().get(2).getMetadata().getTimeSystem());
     }
@@ -550,7 +550,7 @@ public class TdmParserTest {
         Assertions.assertEquals(headerComment, file.getHeader().getComments());
 
         // Meta-Data
-        final TdmMetadata metadata = file.getSegments().get(0).getMetadata();
+        final TdmMetadata metadata = file.getSegments().getFirst().getMetadata();
 
         Assertions.assertEquals("UTC", metadata.getTimeSystem().name());
         Assertions.assertEquals(0.0, new AbsoluteDate("2005-159T17:41:00", utc).durationFrom(metadata.getStartTime()), 0.0);
@@ -570,7 +570,7 @@ public class TdmParserTest {
         Assertions.assertEquals(metaDataComment, metadata.getComments());
 
         // Data
-        final List<Observation> observations = file.getSegments().get(0).getData().getObservations();
+        final List<Observation> observations = file.getSegments().getFirst().getData().getObservations();
 
         // Reference data
         final String[] keywords = {"TRANSMIT_FREQ_2", "RECEIVE_FREQ_1", "RECEIVE_FREQ_1", "RECEIVE_FREQ_1",
@@ -591,7 +591,7 @@ public class TdmParserTest {
         // Comment
         final List<String> dataComment = new ArrayList<>();
         dataComment.add("This is a data comment");
-        Assertions.assertEquals(dataComment, file.getSegments().get(0).getData().getComments());
+        Assertions.assertEquals(dataComment, file.getSegments().getFirst().getData().getComments());
 
         // check so global setters that are not used by parser (it uses successive add instead)
 
@@ -624,7 +624,7 @@ public class TdmParserTest {
         Assertions.assertEquals(headerComment, file.getHeader().getComments());
 
         // Meta-Data
-        final TdmMetadata metadata = file.getSegments().get(0).getMetadata();
+        final TdmMetadata metadata = file.getSegments().getFirst().getMetadata();
 
         Assertions.assertEquals("UTC", metadata.getTimeSystem().name());
         Assertions.assertEquals("DSS-24", metadata.getParticipants().get(1));
@@ -651,7 +651,7 @@ public class TdmParserTest {
         Assertions.assertEquals(metaDataComment, metadata.getComments());
 
         // Data
-        final List<Observation> observations = file.getSegments().get(0).getData().getObservations();
+        final List<Observation> observations = file.getSegments().getFirst().getData().getObservations();
 
         // Reference data
         final String[] keywords = {"TRANSMIT_FREQ_1", "TRANSMIT_FREQ_RATE_1", "RANGE", "PR_N0",
@@ -679,7 +679,7 @@ public class TdmParserTest {
         // Comment
         final List<String> dataComment = new ArrayList<>();
         dataComment.add("This is a data comment");
-        Assertions.assertEquals(dataComment, file.getSegments().get(0).getData().getComments());
+        Assertions.assertEquals(dataComment, file.getSegments().getFirst().getData().getComments());
     }
 
     /**
@@ -699,7 +699,7 @@ public class TdmParserTest {
         Assertions.assertEquals(headerComment, file.getHeader().getComments());
 
         // Meta-Data
-        final TdmMetadata metadata = file.getSegments().get(0).getMetadata();
+        final TdmMetadata metadata = file.getSegments().getFirst().getMetadata();
 
         Assertions.assertEquals("UTC", metadata.getTimeSystem().name());
         Assertions.assertEquals(new AbsoluteDate("1998-06-10T00:57:37", utc).durationFrom(metadata.getStartTime()), 0.0, 0.0);
@@ -721,7 +721,7 @@ public class TdmParserTest {
         Assertions.assertEquals(CorrectionApplied.YES, metadata.getCorrectionsApplied());
 
         // Data
-        final List<Observation> observations = file.getSegments().get(0).getData().getObservations();
+        final List<Observation> observations = file.getSegments().getFirst().getData().getObservations();
 
         // Reference data
         final String[] keywords = {"RANGE", "ANGLE_1", "ANGLE_2", "TRANSMIT_FREQ_1", "RECEIVE_FREQ",
@@ -747,7 +747,7 @@ public class TdmParserTest {
         // Comment
         final List<String> dataComment = new ArrayList<>();
         dataComment.add("This is a data comment");
-        Assertions.assertEquals(dataComment, file.getSegments().get(0).getData().getComments());
+        Assertions.assertEquals(dataComment, file.getSegments().getFirst().getData().getComments());
     }
 
     /**
@@ -767,7 +767,7 @@ public class TdmParserTest {
         Assertions.assertEquals(headerComment, file.getHeader().getComments());
 
         // Meta-Data 1
-        final TdmMetadata metadata = file.getSegments().get(0).getMetadata();
+        final TdmMetadata metadata = file.getSegments().getFirst().getMetadata();
 
         Assertions.assertEquals("UTC", metadata.getTimeSystem().name());
         Assertions.assertEquals(new AbsoluteDate("2007-08-29T07:00:02.000", utc).durationFrom(metadata.getStartTime()), 0.0, 0.0);
@@ -785,7 +785,7 @@ public class TdmParserTest {
         Assertions.assertEquals(metaDataComment, metadata.getComments());
 
         // Data 1
-        final List<Observation> observations = file.getSegments().get(0).getData().getObservations();
+        final List<Observation> observations = file.getSegments().getFirst().getData().getObservations();
 
         // Reference data 1
         final String[] keywords = {"DOPPLER_INTEGRATED", "ANGLE_1", "ANGLE_2",
@@ -808,7 +808,7 @@ public class TdmParserTest {
         // Comment
         final List<String> dataComment = new ArrayList<>();
         dataComment.add("This is a data comment");
-        Assertions.assertEquals(dataComment, file.getSegments().get(0).getData().getComments());
+        Assertions.assertEquals(dataComment, file.getSegments().getFirst().getData().getComments());
 
         // Meta-Data 2
         final TdmMetadata metadata2 = file.getSegments().get(1).getMetadata();
@@ -882,7 +882,7 @@ public class TdmParserTest {
         Assertions.assertEquals(headerComment, file.getHeader().getComments());
 
         // Meta-Data 1
-        final TdmMetadata metadata = file.getSegments().get(0).getMetadata();
+        final TdmMetadata metadata = file.getSegments().getFirst().getMetadata();
 
         Assertions.assertEquals("UTC", metadata.getTimeSystem().name());
         Assertions.assertEquals(new AbsoluteDate("2005-142T12:00:00", utc).durationFrom(metadata.getStartTime()), 0.0, 0.0);
@@ -894,7 +894,7 @@ public class TdmParserTest {
         Assertions.assertEquals(metaDataComment, metadata.getComments());
 
         // Data 1
-        final List<Observation> observations = file.getSegments().get(0).getData().getObservations();
+        final List<Observation> observations = file.getSegments().getFirst().getData().getObservations();
 
         // Reference data 1
         final String[] keywords = {"CLOCK_BIAS", "CLOCK_DRIFT",
@@ -920,7 +920,7 @@ public class TdmParserTest {
         // Comment
         final List<String> dataComment = new ArrayList<>();
         dataComment.add("This is a data comment");
-        Assertions.assertEquals(dataComment, file.getSegments().get(0).getData().getComments());
+        Assertions.assertEquals(dataComment, file.getSegments().getFirst().getData().getComments());
 
 
         // Meta-Data 2
@@ -995,7 +995,7 @@ public class TdmParserTest {
      */
     private void validateTDMExampleAllKeywordsSequential(Tdm file) {
         validateTDMExampleAllKeywordsCommon(file);
-        final TdmMetadata metadata = file.getSegments().get(0).getMetadata();
+        final TdmMetadata metadata = file.getSegments().getFirst().getMetadata();
         Assertions.assertEquals(TrackingMode.SEQUENTIAL, metadata.getMode());
         Assertions.assertArrayEquals(new int[] { 2, 1 }, metadata.getPath());
     }
@@ -1006,7 +1006,7 @@ public class TdmParserTest {
      */
     private void validateTDMExampleAllKeywordsSingleDiff(Tdm file) {
         validateTDMExampleAllKeywordsCommon(file);
-        final TdmMetadata metadata = file.getSegments().get(0).getMetadata();
+        final TdmMetadata metadata = file.getSegments().getFirst().getMetadata();
         Assertions.assertEquals(TrackingMode.SINGLE_DIFF, metadata.getMode());
         Assertions.assertArrayEquals(new int[] { 4, 5 }, metadata.getPath1());
         Assertions.assertArrayEquals(new int[] { 3, 2 }, metadata.getPath2());
@@ -1031,11 +1031,11 @@ public class TdmParserTest {
         Assertions.assertEquals(headerComment, file.getHeader().getComments());
 
         // Meta-Data
-        final TdmMetadata metadata = file.getSegments().get(0).getMetadata();
+        final TdmMetadata metadata = file.getSegments().getFirst().getMetadata();
         Assertions.assertEquals(1, metadata.getComments().size());
-        Assertions.assertEquals("All known meta-data keywords displayed", metadata.getComments().get(0));
+        Assertions.assertEquals("All known meta-data keywords displayed", metadata.getComments().getFirst());
         Assertions.assertEquals(47, metadata.getDataTypes().size());
-        Assertions.assertEquals(ObservationType.CARRIER_POWER        , metadata.getDataTypes().get( 0));
+        Assertions.assertEquals(ObservationType.CARRIER_POWER        , metadata.getDataTypes().getFirst());
         Assertions.assertEquals(ObservationType.DOPPLER_COUNT        , metadata.getDataTypes().get( 1));
         Assertions.assertEquals(ObservationType.DOPPLER_INSTANTANEOUS, metadata.getDataTypes().get( 2));
         Assertions.assertEquals(ObservationType.DOPPLER_INTEGRATED   , metadata.getDataTypes().get( 3));
@@ -1138,7 +1138,7 @@ public class TdmParserTest {
         Assertions.assertEquals(metaDataComment, metadata.getComments());
 
         // Data
-        final List<Observation> observations = file.getSegments().get(0).getData().getObservations();
+        final List<Observation> observations = file.getSegments().getFirst().getData().getObservations();
 
         // Reference data
         final AbsoluteDate epoch = new AbsoluteDate("2017-06-14T10:53:00.000", utc);
@@ -1152,7 +1152,7 @@ public class TdmParserTest {
         // Comment
         final List<String> dataComment = new ArrayList<>();
         dataComment.add("Data Related Keywords");
-        Assertions.assertEquals(dataComment, file.getSegments().get(0).getData().getComments());
+        Assertions.assertEquals(dataComment, file.getSegments().getFirst().getData().getComments());
     }
 
 }
