@@ -471,7 +471,7 @@ public class EstimatedIonosphericModelTest {
                 driver.setSelected(false);
             }
         }
-        ParameterDriver selected = bound.getDrivers().get(0);
+        ParameterDriver selected = bound.getDrivers().getFirst();
         double p0 = selected.getReferenceValue();
         double h  = selected.getScale();
 
