@@ -86,11 +86,11 @@ class GPSPropagatorTest {
 
     @Test
     void testClockCorrections() {
-        final GNSSPropagator propagator = almanacs.get(0).getPropagator();
-        propagator.addAdditionalDataProvider(new ClockCorrectionsProvider(almanacs.get(0),
-                                                                          almanacs.get(0).getCycleDuration()));
+        final GNSSPropagator propagator = almanacs.getFirst().getPropagator();
+        propagator.addAdditionalDataProvider(new ClockCorrectionsProvider(almanacs.getFirst(),
+                                                                          almanacs.getFirst().getCycleDuration()));
         // Propagate at the GPS date and one GPS cycle later
-        final AbsoluteDate date0 = almanacs.get(0).getDate();
+        final AbsoluteDate date0 = almanacs.getFirst().getDate();
         double dtRelMin = 0;
         double dtRelMax = 0;
         for (double dt = 0; dt < 0.5 * Constants.JULIAN_DAY; dt += 1.0) {
@@ -102,14 +102,14 @@ class GPSPropagatorTest {
             dtRelMax = FastMath.max(dtRelMax, corrections[1]);
             Assertions.assertEquals(0.0, corrections[2], Precision.SAFE_MIN);
         }
-        Assertions.assertEquals(0.0,        almanacs.get(0).getToc(), 1.0e-12);
+        Assertions.assertEquals(0.0,        almanacs.getFirst().getToc(), 1.0e-12);
         Assertions.assertEquals(-1.1679e-8, dtRelMin, 1.0e-12);
         Assertions.assertEquals(+1.1679e-8, dtRelMax, 1.0e-12);
     }
 
     @Test
     void testFieldClockCorrections() {
-        final FieldGPSAlmanac<Binary64> gpsAlmanac = almanacs.get(0).toField(Binary64Field.getInstance());
+        final FieldGPSAlmanac<Binary64> gpsAlmanac = almanacs.getFirst().toField(Binary64Field.getInstance());
         final FieldGnssPropagator<Binary64> propagator = gpsAlmanac.getPropagator();
         propagator.addAdditionalDataProvider(new FieldClockCorrectionsProvider<>(gpsAlmanac,
                                                                                   gpsAlmanac.getCycleDuration()));
@@ -134,12 +134,12 @@ class GPSPropagatorTest {
     @Test
     void testGPSCycle() {
         // Builds the GPSPropagator from the almanac
-        final GNSSPropagator propagator = almanacs.get(0).getPropagator(DataContext.getDefault().getFrames(),
+        final GNSSPropagator propagator = almanacs.getFirst().getPropagator(DataContext.getDefault().getFrames(),
                 Utils.defaultLaw(), FramesFactory.getEME2000(), FramesFactory.getITRF(IERSConventions.IERS_2010, false), 1521.0);
         // Propagate at the GPS date and one GPS cycle later
-        final AbsoluteDate date0 = almanacs.get(0).getDate();
+        final AbsoluteDate date0 = almanacs.getFirst().getDate();
         final Vector3D p0 = propagator.propagateInEcef(date0).getPosition();
-        final double gpsCycleDuration = almanacs.get(0).getCycleDuration();
+        final double gpsCycleDuration = almanacs.getFirst().getCycleDuration();
         final AbsoluteDate date1 = date0.shiftedBy(gpsCycleDuration);
         final Vector3D p1 = propagator.propagateInEcef(date1).getPosition();
 
@@ -150,9 +150,9 @@ class GPSPropagatorTest {
     @Test
     void testFrames() {
         // Builds the GPSPropagator from the almanac
-        final GNSSPropagator propagator = almanacs.get(0).getPropagator();
+        final GNSSPropagator propagator = almanacs.getFirst().getPropagator();
         Assertions.assertEquals("EME2000", propagator.getFrame().getName());
-        Assertions.assertEquals(3.986005e14, almanacs.get(0).getMu(), 1.0e6);
+        Assertions.assertEquals(3.986005e14, almanacs.getFirst().getMu(), 1.0e6);
         // Defines some date
         final AbsoluteDate date = new AbsoluteDate(2016, 3, 3, 12, 0, 0., TimeScalesFactory.getUTC());
         // Get PVCoordinates at the date in the ECEF
@@ -167,7 +167,7 @@ class GPSPropagatorTest {
 
     @Test
     void testResetInitialState() {
-        final GNSSPropagator propagator = almanacs.get(0).getPropagator();
+        final GNSSPropagator propagator = almanacs.getFirst().getPropagator();
         final SpacecraftState old = propagator.getInitialState();
         propagator.resetInitialState(new SpacecraftState(old.getOrbit(), old.getAttitude()).withMass(old.getMass() + 1000));
         Assertions.assertEquals(old.getMass() + 1000, propagator.getInitialState().getMass(), 1.0e-9);
@@ -175,7 +175,7 @@ class GPSPropagatorTest {
 
     @Test
     void testResetIntermediateState() {
-        GNSSPropagator propagator = new GNSSPropagatorBuilder(almanacs.get(0)).build();
+        GNSSPropagator propagator = new GNSSPropagatorBuilder(almanacs.getFirst()).build();
         final SpacecraftState old = propagator.getInitialState();
         propagator.resetIntermediateState(new SpacecraftState(old.getOrbit(), old.getAttitude()).withMass( old.getMass() + 1000),
                                           true);
@@ -416,7 +416,7 @@ class GPSPropagatorTest {
 
         // harvester sorts the columns lexicographically, and wraps them as SpanXxx##
         Assertions.assertEquals(2, harvester.getJacobiansColumnsNames().size());
-        Assertions.assertEquals("Span" + CommonGnssData.RADIUS_COSINE + "0", harvester.getJacobiansColumnsNames().get(0));
+        Assertions.assertEquals("Span" + CommonGnssData.RADIUS_COSINE + "0", harvester.getJacobiansColumnsNames().getFirst());
         Assertions.assertEquals("Span" + CommonGnssData.RADIUS_SINE   + "0", harvester.getJacobiansColumnsNames().get(1));
 
         // propagate orbit
@@ -514,7 +514,7 @@ class GPSPropagatorTest {
     @Test
     void testIssue544() {
         // Builds the GPSPropagator from the almanac
-        final GNSSPropagator propagator = new GNSSPropagatorBuilder(almanacs.get(0)).build();
+        final GNSSPropagator propagator = new GNSSPropagatorBuilder(almanacs.getFirst()).build();
         // In order to test the issue, we voluntarily set a Double.NaN value in the date.
         final AbsoluteDate date0 = new AbsoluteDate(2010, 5, 7, 7, 50, Double.NaN, TimeScalesFactory.getUTC());
         final PVCoordinates pv0 = propagator.propagateInEcef(date0);
@@ -528,7 +528,7 @@ class GPSPropagatorTest {
     void testFieldIssue544() {
         // Builds the GPSPropagator from the almanac
         final FieldGnssPropagator<Binary64> propagator =
-            new FieldGnssPropagatorBuilder<>(almanacs.get(0).toField(Binary64Field.getInstance())).build();
+            new FieldGnssPropagatorBuilder<>(almanacs.getFirst().toField(Binary64Field.getInstance())).build();
         // In order to test the issue, we voluntarily set a Double.NaN value in the date.
         final FieldAbsoluteDate<Binary64> date0 =
             new FieldAbsoluteDate<>(Binary64Field.getInstance(),
@@ -546,7 +546,7 @@ class GPSPropagatorTest {
     void testIssue949() {
         // GIVEN
         // Setup propagator
-        final GNSSPropagator propagator = new GNSSPropagatorBuilder(almanacs.get(0)).build();
+        final GNSSPropagator propagator = new GNSSPropagatorBuilder(almanacs.getFirst()).build();
 
         // Setup additional data provider which use the initial state in its init method
         final AdditionalDataProvider<double[]> additionalDataProvider = TestUtils.getAdditionalProviderWithInit();
@@ -559,7 +559,7 @@ class GPSPropagatorTest {
 
     @Test
     void testConversion() {
-        GnssTestUtils.checkFieldConversion(almanacs.get(0));
+        GnssTestUtils.checkFieldConversion(almanacs.getFirst());
     }
 
 }
